--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Cache and logs (Symfony2)
 .DS_Store
+
 /app/cache/*
 /app/logs/*
 !app/cache/.gitkeep
@@ -19,6 +20,7 @@
 # Parameters
 /app/config/parameters.yml
 /app/config/parameters.ini
+/node_modules/*
 
 # Managed by Composer
 /app/bootstrap.php.cache
