--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,7 +32,9 @@ framework:
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
     fragments:       ~
     http_method_override: true
-    assets: ~
+    assets:
+        version: 'v5'
+        version_format: '%%s?version=%%s'
     php_errors:
         log: true
 
