--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,9 +69,9 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
+    transport: gmail
     host:      "%mailer_host%"
-    username:  "%mailer_user%"
+    username:  charliebreval@gmail.com
     password:  "%mailer_password%"
     spool:     { type: memory }
 
