--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 app_home:
     path:      /{_locale}
-    defaults:  { _controller: AppBundle:Home:index, _locale: en}
+    defaults:  { _controller: AppBundle:Home:index, _locale: fr}
     requirements:
         _locale: en|fr
 
