--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,7 +7,7 @@ parameters:
     database_password: root
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: null
+    mailer_user: bonjour@charliebreval.com
     mailer_password: null
     secret: 1c4f9510024a62e27f3695bd4089a522c22fda61
 
