--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,9 +69,12 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: gmail
+    transport: "%mailer_transport%"
+    auth_mode: "%mailer_auth_mode%"
     host:      "%mailer_host%"
-    username:  charliebreval@gmail.com
+    encryption: "%mailer_encryption%"
+    port:      "%mailer_port%"
+    username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
 
